[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "greater_books_scraper"
authors = [
    {name = "Erik Kizior", email = "kiziorerik@gmail.com"}
]
description = "Scrapes data from the Greater Books top 100 list and outputs a .xcl file"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "requests >= 2.26.0",
    "pandas >= 1.3.0",
    "beautifulsoup4 >= 4.9.3"
]